--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,24 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
+/*
+Created by Justin White & Sav Nardi
+For The Port Restaurant, Little Current
+Owners Steph Flannigan and Jared Nardi
+August 3, 2016
 
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
+Color Sections
+dark blue   rgb(26,71,112);
+deep red    rgb(170,34,47);
+
+Fonts
+font-family: 'Nunito', sans-serif;
+font-family: 'Oswald', sans-serif;
+
+*/
 
 
+
+
+/* ==========================================================================
+   ========================================================================== */
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
@@ -16,25 +28,6 @@ html {
     background: #b3d4fc;
     text-shadow: none;
 }
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-
 fieldset {
     border: 0;
     margin: 0;
@@ -54,6 +47,70 @@ textarea {
 
 
 /* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+   .group:after {
+     content: "";
+     display: table;
+     clear: both;
+   }
+
+/* ==========================================================================
+   Universal Styles
+   ========================================================================== */
+
+html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+    background-color: rgba(26,71,112,1);
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+  }
+
+
+    h1 {
+      margin-bottom: 20px;
+      margin-left: 2%;
+
+      /* Lobster, headlines */
+
+      font-family: 'Lobster', cursive;
+      /* target - default = em; 32 - 16 = 2em */
+      font-size: 2.2em;
+      color: rgb(255,255,255);
+
+    }
+    h2 {
+      /* Bebas Neue*/
+      font-family: 'Oswald', sans-serif;
+      font-size: 1.5em; /* 24px */
+      color: rgb(255,255,255);
+      text-transform: uppercase;
+    }
+    h3 {
+      font-family: 'Oswald', sans-serif;
+      font-size: 1.2em;
+      text-transform: uppercase;
+    }
+    body {
+      /* Avenir*/
+      font-family: 'Nunito', sans-serif;
+      color: rgb( 0,0,0 );
+      font-size: 0.95em;
+      font-weight: 300;
+
+    }
+
+
+/* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
@@ -62,25 +119,123 @@ textarea {
   margin: 0px;
   padding: 0px;
 }
-nav {
+    nav {
+      display: flex;
+      list-style-type: none;
+    }
+    nav li {
+      text-decoration: none;
+      color: #000;
 
-}
-.banner {
-  width: 100%;
-  height: 100vh;
-  background-image: url(img/dummy-image.png) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+    }
+    nav li a {
+      text-decoration: none;
+      color: #000;
+    }
+
+/* Banner */
+    /* TODO Possible to stretch the image across the viewport, but not ruin integrity? */
+    .banner {
+      width: 100%;
+      height: 100vh;
+
+      background: url(../img/dummy-2-01.png) no-repeat center center;
+      -webkit-background-size: cover;
+      /* TODO add moz, o webkits */
+      background-size: cover;
+    }
+
+    .logo {
+      /* TODO Position logo using co-ordinates */
+      height: 240px;
+      width: 240px;
+      display: block;
+      margin: 0 auto;
+
+    }
+
+/* Menu Section */
+      .menu {
+          width: 100%;
+          margin-bottom: 60px;
+          /* %% grid !! */
+      }
+      .menu-board {
+        width: 90%;
+        height: 100%;
+        background-color: rgb(75,75,75);
+        margin: 0 auto;
+
+        /* flex items, center horizontally */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+      }
+      #menu-card { /* Controls appearance of menu groupings */
+        width: 90%;
+
+        /* padding, margin values on menu cards */
+        padding: 5%;
+        margin: 20px 0 20px 0;
+
+        color: rgb( 255,255,255 );
+        border: 4px solid rgb(170,34,47);
+
+      }
+
+      svg {
+        width: 48px;
+        height: 48px;
+      }
+      .caveats {
+        width:100%;
+        margin: 20px 0 20px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+/* Hours and Location */
+      .map-bkgd {
+        width: 100%;
+        padding-bottom: 75%;
+        margin-bottom: 20px;
+        background: url(../img/map-sample.jpg) no-repeat center center;
+        -webkit-background-size: cover;
+        /* TODO add moz, o webkits */
+        background-size: cover;
+      }
 
 
+      .info-card {
+        width: 90%;
+        height: 100%;
+        background-color: rgb(215,215,215);
+        margin: 0 auto;
+        margin-bottom: 40px;
+        padding: 5%;
 
+        display: flex;
+        flex-direction: column;
+      }
+          .contact-info {
+            display: flex;
+          }
 
-
-
-
+          .flex-hours {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+          }
+          .info-card ul{
+            width: 50%;
+            padding-left: 0px;
+            list-style-type: none;
+          }
+          .info-card ul li {
+            text-decoration: none;
+          }
 
 
 
@@ -90,125 +245,21 @@ nav {
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
 
-}
+@media (min-width: 640px) {
+  html {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  .banner {
+    background: url(../img/dummy-image.png) no-repeat center center;
+  }
+  .logo {
+    /* TODO Position logo using co-ordinates */
+    height: 480px;
+    width: 480px;
+    display: block;
+    margin: 0 auto;
 
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+  }
 }
