--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ html {
       width: 100%;
       height: 100vh;
 
-      background: url(../img/dummy-2-01.png) no-repeat center center;
+      background: url(../img/banner/keyart-1-a.png) no-repeat center center;
       -webkit-background-size: cover;
       /* TODO add moz, o webkits */
       background-size: cover;
