--- a/css/main.css
+++ b/css/main.css
@@ -124,9 +124,10 @@ body {
     background-color: rgba(26,71,112,1);
 }
 
-nav {
+.nav {
     display: flex;
     list-style-type: none;
+    background-color: rgba(26,71,112,1);
 }
 
     nav li {
@@ -177,7 +178,7 @@ nav {
     }
 
 .layer.layer-00 {
-    background-image: url('/img/banner/keyart-1.png');
+    background-image: url('/img/banner/keyart-1-a.png');
     width: 100%;
 }
 
