--- a/css/main.css
+++ b/css/main.css
@@ -61,178 +61,181 @@ textarea {
    Universal Styles
    ========================================================================== */
 
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+          html {
+              color: #222;
+              font-size: 1em;
+              line-height: 1.4;
+              -webkit-box-sizing: border-box;
+              -moz-box-sizing: border-box;
+              box-sizing: border-box;
+          }
 
-*, *:before, *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-}
+          *, *:before, *:after {
+              -webkit-box-sizing: inherit;
+              -moz-box-sizing: inherit;
+              box-sizing: inherit;
+          }
 
 
-h1 {
-    margin-bottom: 20px;
-    margin-left: 2%;
-    /* Lobster, headlines */
-    font-family: 'Lobster', cursive;
-    /* target - default = em; 32 - 16 = 2em */
-    font-size: 2.2em;
-    color: rgb(255,255,255);
-}
+          h1 {
+              margin-bottom: 20px;
+              margin-left: 2%;
+              /* Lobster, headlines */
+              font-family: 'Lobster', cursive;
+              /* target - default = em; 32 - 16 = 2em */
+              font-size: 2.2em;
+              color: rgb(255,255,255);
+          }
 
-h2 {
-    /* Bebas Neue*/
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.5em; /* 24px */
-    color: rgb(255,255,255);
-    text-transform: uppercase;
-}
+          h2 {
+              /* Bebas Neue*/
+              font-family: 'Oswald', sans-serif;
+              font-size: 1.5em; /* 24px */
+              color: rgb(255,255,255);
+              text-transform: uppercase;
+          }
 
-h3 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.2em;
-    text-transform: uppercase;
-}
+          h3 {
+              font-family: 'Oswald', sans-serif;
+              font-size: 1.2em;
+              text-transform: uppercase;
+          }
 
-body {
-    /* Avenir*/
-    font-family: 'Nunito', sans-serif;
-    color: rgb( 0,0,0 );
-    font-size: 0.95em;
-    font-weight: 300;
-    background-color: rgba(26,71,112,1);
-}
+          body {
+              /* Avenir*/
+              font-family: 'Nunito', sans-serif;
+              color: rgb( 0,0,0 );
+              font-size: 0.95em;
+              font-weight: 300;
+          }
+
+
+          .container-fluid {
+            padding: 0;
+          }
+          .main-contain {
+              background-color: rgba(26,71,112,1);
+          }
 
 
 /* ==========================================================================
-   Author's custom styles
+   Navigation Bar
    ========================================================================== */
 
-#page {
+nav { /* parent container of nav elements */
     width: 100%;
-    margin: 0px;
-    padding: 0px;
     position: relative;
-    top: 25px;
-    background-color: rgba(26,71,112,1);
+    top: 36px;
 }
 
 .nav {
     display: flex;
+    justify-content: flex-end;
     list-style-type: none;
-    background-color: rgba(26,71,112,1);
+    background-color: rgba(26,71,112,0);
+    border: none;
 }
-
-    nav li {
-        text-decoration: none;
-        color: #000;
+    .nav li {
+        padding-left: 3%;
     }
 
-        nav li a {
+        .nav li a {
+            position: relative;
+            float: right;
+            padding: 0;
             text-decoration: none;
-            color: #000;
+            color: #513527;
+
         }
 
-/* Banner */
-/* TODO Possible to stretch the image across the viewport, but not ruin integrity? */
+.weather-icon {
 
-.banner {
-    width: 100%;
-    /*height: 100vh;*/
-    min-height: 400px;
-    background: transparent;
-    margin-top: 40px;
-    /*background: url(../img/dummy-2-01.png) no-repeat center center;*/
-    /*-webkit-background-size: cover;*/
-    /* TODO add moz, o webkits */
-    /*background-size: cover;*/
+
 }
+  .open-closed-icon {
 
-.banner-img {
-    position: absolute;
-    width: 1000px;
-    height: 500px;
-}
-
-#little-current {
-    height: 800px;
-    overflow: hidden;
-    position: relative;
-}
-
-    #little-current .layer {
-        background-position: bottom center;
-        background-size: auto;
-        background-repeat: no-repeat;
-        width: 100%;
-        height: 800px;
-        position: fixed;
-        z-index: -1;
-    }
-
-.layer.layer-00 {
-    background-image: url('../img/banner/keyart-1-a.png');
-    width: 100%;
-}
-
-.layer.layer-01 {
-    background-image: url('../img/banner/keyart-2.png');
-    width: 100%;
-}
-
-.layer.layer-02 {
-    background-image: url('../img/banner/keyart-3_banner.png');
-    width: 120%;
-    animation-name: up-down;
-    animation-direction: alternate;
-    animation-timing-function: linear;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
-
-.layer.layer-03 {
-    background-image: url('../img/banner/keyart-4_banner.png');
-    width: 120%;
-    animation-name: down-up;
-    animation-direction: alternate;
-    animation-timing-function: linear;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
-
-.layer.layer-04 {
-    background-image: url('../img/banner/keyart-5_banner.png');
-    width: 120%;
-    animation-name: up-down;
-    animation-direction: alternate;
-    animation-timing-function: linear;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
+  }
 
 
-.logo {
-    height: 100px;
-    width: 100vw;
-    display: flex;
-    margin-top: 120px;
-    /*position: fixed;*/
-    justify-content: center;
-}
 
-.img-logo {
-    width: 200px;
-    height: 150px;
-}
+/* ==========================================================================
+   Banner & Parallax
+   ========================================================================== */
+        .banner {
+            width: 100%;
+            min-height: 400px;
+            background: transparent;
+        }
 
-/* Menu Section */
+
+        /* Parallax Container  */
+        #little-current {
+            height: 1000px;
+            overflow: hidden;
+            position: relative;
+        }
+
+            #little-current .layer {
+                background-position: bottom center;
+                background-size: auto;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 1000px;
+                position: fixed;
+                z-index: -1;
+            }
+
+
+        /* keyart frames */
+        .layer.layer-00 {
+            background-image: url('../img/banner/keyart-1-a.png');
+            width: 100%;
+        }
+
+        .layer.layer-01 {
+            background-image: url('../img/banner/keyart-2.png');
+            width: 100%;
+        }
+
+        .layer.layer-02 {
+            background-image: url('../img/banner/keyart-3_banner.png');
+            width: 120%;
+            animation-name: up-down;
+            animation-direction: alternate;
+            animation-timing-function: linear;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+        }
+
+        .layer.layer-03 {
+            background-image: url('../img/banner/keyart-4_banner.png');
+            width: 120%;
+            animation-name: down-up;
+            animation-direction: alternate;
+            animation-timing-function: linear;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+        }
+
+        .layer.layer-04 {
+            background-image: url('../img/banner/keyart-5_banner.png');
+            width: 120%;
+            animation-name: up-down;
+            animation-direction: alternate;
+            animation-timing-function: linear;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+        }
+
+
+
+
+
+
+/* ==========================================================================
+   Menu
+   ========================================================================== */
+
 .menu {
     width: 100%;
     margin-bottom: 60px;
@@ -333,31 +336,6 @@ svg {
 
 
 
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-/*
-@media (min-width: 640px) {
-    html {
-
-        margin: 0 auto;
-    }
-
-    .banner {
-        background: url(../img/dummy-image.png) no-repeat center center;
-    }
-
-    .logo1 {
-        height: 480px;
-        width: 480px;
-        display: block;
-        margin: 0 auto;
-    }
-}
-*/
 
 /*  ==========================================================================
     Animations
