--- a/css/main.css
+++ b/css/main.css
@@ -61,61 +61,62 @@ textarea {
    Universal Styles
    ========================================================================== */
 
-          html {
-              color: #222;
-              font-size: 1em;
-              line-height: 1.4;
-              -webkit-box-sizing: border-box;
-              -moz-box-sizing: border-box;
-              box-sizing: border-box;
-          }
+html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
-          *, *:before, *:after {
-              -webkit-box-sizing: inherit;
-              -moz-box-sizing: inherit;
-              box-sizing: inherit;
-          }
-
-
-          h1 {
-              margin-bottom: 20px;
-              margin-left: 2%;
-              /* Lobster, headlines */
-              font-family: 'Lobster', cursive;
-              /* target - default = em; 32 - 16 = 2em */
-              font-size: 2.2em;
-              color: rgb(255,255,255);
-          }
-
-          h2 {
-              /* Bebas Neue*/
-              font-family: 'Oswald', sans-serif;
-              font-size: 1.5em; /* 24px */
-              color: rgb(255,255,255);
-              text-transform: uppercase;
-          }
-
-          h3 {
-              font-family: 'Oswald', sans-serif;
-              font-size: 1.2em;
-              text-transform: uppercase;
-          }
-
-          body {
-              /* Avenir*/
-              font-family: 'Nunito', sans-serif;
-              color: rgb( 0,0,0 );
-              font-size: 0.95em;
-              font-weight: 300;
-          }
+*, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+}
 
 
-          .container-fluid {
-            padding: 0;
-          }
-          .main-contain {
-              background-color: rgba(26,71,112,1);
-          }
+h1 {
+    margin-bottom: 20px;
+    margin-left: 2%;
+    /* Lobster, headlines */
+    font-family: 'Lobster', cursive;
+    /* target - default = em; 32 - 16 = 2em */
+    font-size: 2.2em;
+    color: rgb(255,255,255);
+}
+
+h2 {
+    /* Bebas Neue*/
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.5em; /* 24px */
+    color: rgb(255,255,255);
+    text-transform: uppercase;
+}
+
+h3 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+
+body {
+    /* Avenir*/
+    font-family: 'Nunito', sans-serif;
+    color: rgb( 0,0,0 );
+    font-size: 0.95em;
+    font-weight: 300;
+}
+
+
+.container-fluid {
+    padding: 0;
+}
+
+.main-contain {
+    background-color: rgba(26,71,112,1);
+}
 
 
 /* ==========================================================================
@@ -135,100 +136,99 @@ nav { /* parent container of nav elements */
     background-color: rgba(26,71,112,0);
     border: none;
 }
-    .nav li {
-        padding-left: 3%;
-    }
 
-        .nav li a {
-            position: relative;
-            float: right;
-            padding: 0;
-            text-decoration: none;
-            color: #513527;
+.nav li {
+    padding-left: 3%;   
+}
 
-        }
+.nav li a {
+    position: relative;
+    float: right;
+    padding: 0;
+    text-decoration: none;
+    color: #513527;
+}
 
 .weather-icon {
-
-
 }
-  .open-closed-icon {
 
-  }
-
+.open-closed-icon {
+}
 
 
 /* ==========================================================================
    Banner & Parallax
    ========================================================================== */
-        .banner {
-            width: 100%;
-            min-height: 400px;
-            background: transparent;
-        }
+#header {
+    width: 100%;
+    min-height: 400px;
+    background: transparent;
+}
 
 
-        /* Parallax Container  */
-        #little-current {
-            height: 1000px;
-            overflow: hidden;
-            position: relative;
-        }
+/* Parallax Container  */
+#little-current {
+    height: 1000px;
+    overflow: hidden;
+    position: relative;
+}
 
-            #little-current .layer {
-                background-position: bottom center;
-                background-size: auto;
-                background-repeat: no-repeat;
-                width: 100%;
-                height: 1000px;
-                position: fixed;
-                z-index: -1;
-            }
-
-
-        /* keyart frames */
-        .layer.layer-00 {
-            background-image: url('../img/banner/keyart-1-a.png');
-            width: 100%;
-        }
-
-        .layer.layer-01 {
-            background-image: url('../img/banner/keyart-2.png');
-            width: 100%;
-        }
-
-        .layer.layer-02 {
-            background-image: url('../img/banner/keyart-3_banner.png');
-            width: 120%;
-            animation-name: up-down;
-            animation-direction: alternate;
-            animation-timing-function: linear;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-        }
-
-        .layer.layer-03 {
-            background-image: url('../img/banner/keyart-4_banner.png');
-            width: 120%;
-            animation-name: down-up;
-            animation-direction: alternate;
-            animation-timing-function: linear;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-        }
-
-        .layer.layer-04 {
-            background-image: url('../img/banner/keyart-5_banner.png');
-            width: 120%;
-            animation-name: up-down;
-            animation-direction: alternate;
-            animation-timing-function: linear;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-        }
+    #little-current .layer {
+        background-position: bottom center;
+        background-size: auto;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 1000px;
+        position: fixed;
+        z-index: -1;
+    }
 
 
+/* keyart frames */
+.layer.layer-00 {
+    background-image: url('../img/banner/keyart-1-a.png');
+    width: 100%;
+}
 
+.layer.layer-01 {
+    background-image: url('../img/banner/keyart-2.png');
+    width: 100%;
+}
+
+.layer.layer-02 {
+    background-image: url('../img/banner/keyart-3_banner.png');
+    width: 120%;
+    animation-name: up-down;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+.layer.layer-03 {
+    background-image: url('../img/banner/keyart-4_banner.png');
+    width: 120%;
+    animation-name: down-up;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+.layer.layer-04 {
+    background-image: url('../img/banner/keyart-5_banner.png');
+    width: 120%;
+    animation-name: up-down;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+
+#page {
+    background-color: rgba(26,71,112,1);
+}
 
 
 
